--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,78 @@
 annotated-types==0.7.0
 anyio==4.3.0
+appnope==0.1.4
+asttokens==2.4.1
+cachetools==5.3.3
 certifi==2024.2.2
+charset-normalizer==3.3.2
+comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
 distro==1.9.0
 exceptiongroup==1.2.1
+executing==2.0.1
 fonttools==4.52.1
+google-api-core==2.19.0
+google-auth==2.29.0
+google-cloud==0.34.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.16.0
+googleapis-common-protos==1.63.0
+grpcio==1.64.0
+grpcio-status==1.62.2
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
+importlib_metadata==7.1.0
 importlib_resources==6.4.0
+ipykernel==6.29.4
+ipython==8.18.1
+jedi==0.19.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 kiwisolver==1.4.5
 matplotlib==3.9.0
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
 numpy==1.26.4
 openai==1.30.3
 packaging==24.0
 pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
 pillow==10.3.0
+platformdirs==4.2.2
+plotly==5.22.0
+prompt-toolkit==3.0.43
+proto-plus==1.23.0
+protobuf==4.25.3
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydantic==2.7.1
 pydantic_core==2.18.2
+Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pyzmq==26.0.3
+requests==2.32.2
+rsa==4.9
+seaborn==0.13.2
 six==1.16.0
 sniffio==1.3.1
+stack-data==0.6.3
+tenacity==8.3.0
+tornado==6.4
 tqdm==4.66.4
+traitlets==5.14.3
 typing_extensions==4.12.0
 tzdata==2024.1
+urllib3==2.2.1
+wcwidth==0.2.13
 zipp==3.19.0
